--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Diseñador Freelancer</title>
+        <link rel="preload" href="css/style.css" as="style">
+        <link rel="stylesheet" href="css/style.css">
     </head>
+
     <body>
         <header>
             <h1>Onimer Jose Olivieri Jacome - Freelancer</h1>
