--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Diseñador Freelancer</title>
+        <link rel="preload" href="css/normalize.css" as="style">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap"
+            rel="stylesheet">
         <link rel="preload" href="css/style.css" as="style">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
-            <h1>Onimer Jose Olivieri Jacome - Freelancer</h1>
+            <h1 class="titulo">Onimer Jose Olivieri Jacome <span>Freelancer</span></h1>
         </header>
 
-        <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Nosotros</a>
-            <a href="#">Clientes</a>
-            <a href="#">Contacto</a>
-        </nav>
+        <div class="nav-bg">
+            <nav class="navegacion-principal contenedor">
+                <a href="#">Inicio</a>
+                <a href="#">Nosotros</a>
+                <a href="#">Clientes</a>
+                <a href="#">Contacto</a>
+            </nav>
+        </div>
 
         <section>
-            <h2>Diseño y Desarrollo Web Freelancer</h2>
+            <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
 
             <svg xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-map-pin" width="88"
@@ -63,20 +72,30 @@
             <section>
                 <h3>Aplicaciones Moviles</h3>
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-android" width="40" height="40" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-brand-android"
+                    width="40" height="40" viewBox="0 0 24 24" stroke-width="2"
+                    stroke="#000000" fill="none" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                     <path d="M4 10l0 6" />
                     <path d="M20 10l0 6" />
-                    <path d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
+                    <path
+                        d="M7 9h10v8a1 1 0 0 1 -1 1h-8a1 1 0 0 1 -1 -1v-8a5 5 0 0 1 10 0" />
                     <path d="M8 3l1 2" />
                     <path d="M16 3l-1 2" />
                     <path d="M9 18l0 3" />
                     <path d="M15 18l0 3" />
                 </svg>
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-apple" width="40" height="40" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-brand-apple" width="40"
+                    height="40" viewBox="0 0 24 24" stroke-width="2"
+                    stroke="#000000" fill="none" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path
+                        d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
                     <path d="M12 4a2 2 0 0 0 2 -2a2 2 0 0 0 -2 2" />
                 </svg>
 
@@ -86,9 +105,14 @@
 
             <section>
                 <h3>E-Comerce</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="40" height="40" viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-credit-card" width="40"
+                    height="40" viewBox="0 0 24 24" stroke-width="2"
+                    stroke="#000000" fill="none" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path
+                        d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" />
                     <path d="M3 10l18 0" />
                     <path d="M7 15l.01 0" />
                     <path d="M11 15l2 0" />
@@ -104,7 +128,7 @@
             <form>
                 <fieldset>
                     <legend>Contactame llenando todos los campos</legend>
-                    
+
                     <div>
                         <label>Nombre</label>
                         <input type="text" placeholder="Nombre">
@@ -125,7 +149,7 @@
                         <textarea></textarea>
                     </div>
 
-                    <div>    
+                    <div>
                         <input type="submit" value="Enviar">
                     </div>
                 </fieldset>
