--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <body>
         <header>
-            <h1 class="titulo">Onimer Jose Olivieri Jacome <span>Freelancer</span></h1>
+            <h1 class="titulo">Onimer Jose Olivieri Jacome
+                <span>Freelancer</span></h1>
         </header>
 
         <div class="nav-bg">
@@ -29,23 +30,28 @@
             </nav>
         </div>
 
-        <section>
-            <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
+        <section class="hero">
 
-            <svg xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-map-pin" width="88"
-                height="88" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="#ffbf00" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-                <path
-                    d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-            </svg>
+            <div class="contenido-hero">
 
-            <p>Bucaramanga, Colombia</p>
+                <h2 class="titulo">Diseño y Desarrollo Web Freelancer</h2>
 
-            <a href="#">Contactar</a>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-map-pin" width="88"
+                    height="88" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="#ffbf00" fill="none" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                    <path
+                        d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+                </svg>
+
+                <p>Bucaramanga, Colombia</p>
+
+                <a href="#">Contactar</a>
+            </div>
+
         </section>
 
         <main>
