--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         </section>
 
-        <main>
+        <main class="contenedor sombra">
             <h2>Mis Servicios</h2>
 
             <section>
